@@ -1,6 +1,11 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2016-09-15 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Update Python Erlang Binary Term Format source code to
+      handle Erlang maps nested as keys in a map
+
 2016-09-14 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Next release will be 1.5.3 instead of 1.5.2 due to dependency updates
